# Test-Plugin

./: CMakeLists.txt  README.md
resource/: Info.plist  myplugineditor.uidesc
source/: myplugincids.h  myplugincontroller.cpp  myplugincontroller.h  mypluginentry.cpp  mypluginprocessor.cpp  mypluginprocessor.h  version.h
